# fusion-toolsmith-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FusionMCP.manifest  FusionMCP.py  README.md  SECURITY.md  __init__.py  best_practices.md  help_context.json  makerworld_description.html  pyproject.toml  server.json  tool_profiles.json  workflow_guide.md
.agents/skills/fusion360_mcp_mastery/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  tool_request.yml  workflow_request.yml
.github/workflows/: ci.yml  release.yml
docs/: client-config.md  demo-evidence.md  demo-script.md  development.md  external-fusion-mcp-sweep.md  features.md  installation.md  mock-payload-examples.md  safety-model.md  tooling-roadmap.md
examples/: prompts.md
fusion_mcp_cli/: __init__.py  cli.py  mock_server.py  offline_schema.py
scripts/: create_coil_manual_center_target.py  install_fusion_mcp_addin.ps1  sync_antigravity_fusion_mcp_config.ps1  test_fusion_mcp_3mf_fixture.ps1  test_fusion_mcp_inspection_fixture.ps1  test_fusion_mcp_live.ps1
server/: __init__.py  mcp_server.py  task_manager.py
tests/: test_manifest_and_deployment.py  test_protocol_and_registry.py
tools/: __init__.py  features.py  inspection.py  parametric.py  sketching.py  utilities.py
