[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion-toolsmith-mcp"
version = "1.1.0"
description = "Fusion Toolsmith MCP: safety-first, diagnostic, tool-first server for serious agent-assisted Autodesk Fusion 360 CAD work."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Scott" }
]
license = { text = "MIT" }
keywords = ["autodesk-fusion-360", "mcp", "cad", "fusion-toolsmith"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/NeonN3mesis/fusion-toolsmith-mcp"
Repository = "https://github.com/NeonN3mesis/fusion-toolsmith-mcp"
Issues = "https://github.com/NeonN3mesis/fusion-toolsmith-mcp/issues"

[project.scripts]
fusion-mcp = "fusion_mcp_cli.cli:main"

[tool.setuptools]
packages = ["fusion_mcp_cli"]
